@@ -21,34 +21,26 @@
  * questions.
  */
 
-import org.junit.jupiter.api.condition.EnabledIf;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
-import static org.junit.jupiter.api.Assertions.*;
-import jdk.test.lib.Utils;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.Writer;
-import java.lang.ProcessHandle;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.concurrent.TimeUnit;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
-import java.util.StringJoiner;
 import java.util.stream.Collectors;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.fail;
 
 /*
  * @test id=FORK
  * @bug 8289643 8291760 8291986
- * @requires os.family == "mac" | (os.family == "linux" & !vm.musl)
+ * @requires os.family == "mac" | os.family == "linux"
  * @summary File descriptor leak detection with ProcessBuilder.startPipeline
  * @library /test/lib
  * @run junit/othervm/timeout=240 -Djdk.lang.Process.launchMechanism=FORK PipelineLeaksFD
@@ -56,20 +48,23 @@ import java.util.stream.Collectors;
 
 /*
  * @test id=POSIX_SPAWN
- * @bug 8289643 8291760 8291986
- * @requires os.family == "mac" | (os.family == "linux" & !vm.musl)
+ * @bug 8289643 8291760 8291986 8379182
+ * @requires os.family == "mac" | os.family == "linux"
  * @summary File descriptor leak detection with ProcessBuilder.startPipeline
  * @library /test/lib
- * @run junit/othervm/timeout=240 -Djdk.lang.Process.launchMechanism=POSIX_SPAWN PipelineLeaksFD
+ * @run junit/othervm/native/timeout=240 -Djdk.lang.Process.launchMechanism=POSIX_SPAWN PipelineLeaksFD
  */
 
 public class PipelineLeaksFD {
 
-    private static final String OS_NAME = System.getProperty("os.name", "Unknown");
+    private static final String TEST_JDK = System.getProperty("test.jdk");
+
+    private static final String JAVA_LIBRARY_PATH = System.getProperty("java.library.path");
 
     private static final long MY_PID =  ProcessHandle.current().pid();
 
-    private static final boolean LSOF_AVAILABLE = checkForLSOF();
+    // Maximum file descriptor to probe for being a pipe,
+    private static final int MAX_FD = 100;
 
     // Test cases for pipelines with a number of pipeline sequences
     public static Object[][] builders() {
@@ -85,39 +80,17 @@ public class PipelineLeaksFD {
         };
     }
 
-    // True if lsof is runnable and collect pipe usage.
-    private static boolean lsofAvailable() {
-        return LSOF_AVAILABLE;
-    }
-
-    // Check if lsof is available
-    private static boolean checkForLSOF() {
-        try {
-            lsofForPids(MY_PID);
-            return true;
-        } catch (IOException ioe) {
-            System.err.println("Skipping: " + ioe);
-            return false;
-        }
-    }
-
-    @EnabledIf("lsofAvailable")
     @ParameterizedTest
     @MethodSource("builders")
     void checkForLeaks(List<ProcessBuilder> builders) throws IOException {
 
         System.out.println("Using:" + System.getProperty("jdk.lang.Process.launchMechanism"));
-
-        List<String> lsofLines = lsofForPids(MY_PID);
-        Set<PipeRecord> pipesBefore = pipesFromLSOF(lsofLines, MY_PID);
-        if (pipesBefore.size() < 3) {
-            // Dump all lsof output to aid debugging
-            System.out.println("Output from lsof");
-            lsofLines.forEach(System.err::println);
-            System.err.println(pipesBefore);
-            fail("There should be at least 3 pipes before, (0, 1, 2)");
+        Set<PipeRecord> beforePipes = pipesFromSelf();
+        if (beforePipes.size() < 3) {
+            fail("There should be at least 3 pipes before, (0, 1, 2): is " +
+                    beforePipes.size());
         }
-        printPipes(pipesBefore, "Before start");
+        printPipes(beforePipes, "Before start");
 
         List<Process> processes = ProcessBuilder.startPipeline(builders);
 
@@ -144,18 +117,14 @@ public class PipelineLeaksFD {
 
         processes.forEach(PipelineLeaksFD::waitForQuiet);
 
-        lsofLines = lsofForPids(MY_PID);
-        Set<PipeRecord> pipesAfter = pipesFromLSOF(lsofLines, MY_PID);
-        if (!pipesBefore.equals(pipesAfter)) {
-            Set<PipeRecord> missing = new HashSet<>(pipesBefore);
-            missing.removeAll(pipesAfter);
-            printPipes(missing, "Missing from pipesAfter");
-            Set<PipeRecord> extra = new HashSet<>(pipesAfter);
-            extra.removeAll(pipesBefore);
-            printPipes(extra, "Extra pipes in pipesAfter");
-            // Dump all lsof output to aid debugging
-            System.out.println("\nOutput from lsof");
-            lsofLines.forEach(System.err::println);
+        Set<PipeRecord> afterPipes = pipesFromSelf();
+        if (!beforePipes.equals(afterPipes)) {
+            Set<PipeRecord> missing = new HashSet<>(beforePipes);
+            missing.removeAll(afterPipes);
+            printPipes(missing, "Missing from beforePipes()");
+            Set<PipeRecord> extra = new HashSet<>(afterPipes);
+            extra.removeAll(beforePipes);
+            printPipes(extra, "Extra pipes in afterPipes()");
             fail("More or fewer pipes than expected");
         }
     }
@@ -168,43 +137,46 @@ public class PipelineLeaksFD {
         };
     }
 
-    // Test redirectErrorStream  (true/false) has the right number of pipes in use
-    @EnabledIf("lsofAvailable")
+    // Test redirectErrorStream  (true/false) has the right number of pipes in use.
+    // Spawn the child to report its pipe inode info.
     @ParameterizedTest()
     @MethodSource("redirectCases")
     void checkRedirectErrorStream(boolean redirectError) {
 
         System.out.println("Using:" + System.getProperty("jdk.lang.Process.launchMechanism"));
 
-        try (Process p = new ProcessBuilder("cat")
+        try (Process p = new ProcessBuilder(TEST_JDK + "/bin/java",
+                "--enable-preview",
+                "-Djava.library.path=" + JAVA_LIBRARY_PATH,
+                "--enable-native-access=ALL-UNNAMED", "LinuxFDInfo")
                 .redirectErrorStream(redirectError)
                 .start()) {
-            System.err.printf("Parent PID; %d, Child Pid: %d\n", MY_PID, p.pid());
-            List<String> lsofLines = lsofForPids(MY_PID, p.pid());
-            final Set<PipeRecord> pipes = pipesFromLSOF(lsofLines, MY_PID, p.pid());
-            printPipes(pipes, "Parent and child pipes");
 
-            // For each of the child standard pipes, check the parent and child uses of the pipe
-            var pIn = PipeRecord.pipeFor(pipes, p.pid(), 0).orElseThrow();
-            Set<PipeRecord> pIns = PipeRecord.allSamePipes(pipes, pIn);
-            assertEquals(2, pIns.size(), "StdIn pipe count");
+            final Set<PipeRecord> pipes = pipesFromSelf();
+            printPipes(pipes, "Parent pipes");
 
+            List<String> lines = p.inputReader().readAllLines();
+            Set<PipeRecord> childPipes = lines.stream().map(s -> {
+                var fdAndInode = LinuxFDInfo.parseFdAndInode(s);
+                return PipeRecord.lookup(fdAndInode.fd(), "0x%08x".formatted(fdAndInode.inode()), p.pid());
+            })
+                    .collect(Collectors.toCollection(LinkedHashSet::new));
+            printPipes(childPipes, "child pipes");
+            int uniquePipes = childPipes.stream().map(PipeRecord::myKey).collect(Collectors.toSet()).size();
             // Number of pipe references depending on whether stderr is redirected to stdout
-            long expected = redirectError ? 3 : 2;
-
-            var pOut = PipeRecord.pipeFor(pipes, p.pid(), 1).orElseThrow();
-            Set<PipeRecord> pOuts = PipeRecord.allSamePipes(pipes, pOut);
-            assertEquals(expected, pOuts.size(), "StdOut pipe count");
-
-            var pErr = PipeRecord.pipeFor(pipes, p.pid(), 2).orElseThrow();
-            Set<PipeRecord> pErrs = PipeRecord.allSamePipes(pipes, pErr);
-            assertEquals(expected, pErrs.size(), "StdErr pipe count");
+            long expected = redirectError ? 2 : 3;
+            assertEquals(expected, uniquePipes, "Wrong number of unique pipes");
 
             String expectedTypeName = redirectError
                     ? "java.lang.ProcessBuilder$NullInputStream"
                     : "java.lang.ProcessImpl$ProcessPipeInputStream";
             assertEquals(expectedTypeName, p.getErrorStream().getClass().getName(),
                     "errorStream type is incorrect");
+
+            final Set<PipeRecord> afterPipes = pipesFromSelf();
+            if (!pipes.equals(afterPipes)) {
+                printPipes(afterPipes, "Parent pipes after are different");
+            }
         } catch (IOException ioe) {
             fail("Process start", ioe);
         }
@@ -221,122 +193,26 @@ public class PipelineLeaksFD {
             if (st != 0) {
                 System.err.println("non-zero exit status: " + p);
             }
-        } catch (InterruptedException ie) {
+        } catch (InterruptedException ignore) {
         }
     }
 
-    /**
-     * Extract the PipeRecords from the `lsof` output for a list of processes
-     *
-     * @param lines lines of lsof output
-     * @param pids varargs list of pids of interest
-     * @return a Set of PipeRecords for those pids
-     */
-    private static LinkedHashSet<PipeRecord> pipesFromLSOF(List<String> lines, long... pids) {
-        Arrays.sort(pids);
-        return lines.stream()
-                .map(PipelineLeaksFD::pipeFromLSOF)
-                .filter(pr -> pr != null &&
-                        Arrays.binarySearch(pids, pr.pid()) >= 0)
-                .collect(Collectors.toCollection(LinkedHashSet::new));
-    }
-
-    /**
-     * Collect the output of `lsof` for all files.
-     * Files are used for `lsof` input and output to avoid creating pipes.
-     * @param pids zero or more pids to request data for; none -> all
-     * @return a List of lines output from `lsof`.
-     */
-    private static List<String> lsofForPids(long... pids) throws IOException {
-        Path tmpDir = Path.of(".");
-        String tmpPrefix = "lsof-";
-        Path lsofEmptyInput = Files.createTempFile(tmpDir, tmpPrefix, ".empty");
-        Path lsofOutput = Files.createTempFile(tmpDir, tmpPrefix, ".tmp");
-
-        List<String> lsofArgs = new ArrayList<>();
-        lsofArgs.add("lsof");
-        if (pids.length > 0) {
-            StringJoiner pidsArg = new StringJoiner(",");
-            for (long p : pids) {
-                pidsArg.add(Long.toString(p));
+    static Set<PipeRecord> pipesFromSelf() {
+        Set<PipeRecord> pipes = new LinkedHashSet<>(MAX_FD);
+        for (int fd = 0; fd < MAX_FD; fd++) {
+            long inode = LinuxFDInfo.getPipeInodeNum(fd);
+            if (inode != 0) {
+                pipes.add(PipeRecord.lookup(fd, "0x%08x".formatted(inode), MY_PID));
             }
-            lsofArgs.add("-p");
-            lsofArgs.add(pidsArg.toString());
         }
-
-        try (Process p = new ProcessBuilder(lsofArgs)
-                .redirectOutput(lsofOutput.toFile())
-                .redirectInput(lsofEmptyInput.toFile()) // empty input
-                .redirectError(ProcessBuilder.Redirect.DISCARD) // ignored output
-                .start()) {
-            boolean status = p.waitFor(Utils.adjustTimeout(120), TimeUnit.SECONDS);
-            if (!status) {
-                p.destroyForcibly();
-            }
-            assertTrue(status, "Process 'lsof' failed");
-
-            return Files.readAllLines(lsofOutput);
-        } catch (InterruptedException ie) {
-            throw new IOException("Waiting for lsof exit interrupted", ie);
-        }
-    }
-
-    // Return pipe records by parsing the appropriate platform specific `lsof` output.
-    static PipeRecord pipeFromLSOF(String s) {
-        return switch (OS_NAME) {
-            case "Linux" -> pipeFromLinuxLSOF(s);
-            case "Mac OS X" -> pipeFromMacLSOF(s);
-            default -> throw new RuntimeException("lsof not supported on platform: " + OS_NAME);
-        };
-    }
-
-    // Return Pipe from lsof output put, or null (on Mac OS X)
-    // lsof      55221 xxxx    0      PIPE 0xc76402237956a5cb      16384  ->0xfcb0c07ae447908c
-    // lsof      55221 xxxx    1      PIPE 0xb486e02f86da463e      16384  ->0xf94eacc85896b4e6
-    static PipeRecord pipeFromMacLSOF(String s) {
-        String[] fields = s.split("\\s+");
-        if ("PIPE".equals(fields[4])) {
-            final int pid = Integer.parseInt(fields[1]);
-            final String myKey = (fields.length > 5) ? fields[5] : "";
-            final String otherKey = (fields.length > 7) ? fields[7].substring(2) : "";
-            return PipeRecord.lookup(Integer.parseInt(fields[3]), myKey, otherKey, pid);
-        }
-        return null;
-    }
-
-    // Return Pipe from lsof output put, or null (on Linux)
-    // java    7612 xxxx   14w  FIFO   0,12       0t0   117662267 pipe
-    // java    7612 xxxx   15r  FIFO   0,12       0t0   117662268 pipe
-    static PipeRecord pipeFromLinuxLSOF(String s) {
-        String[] fields = s.split("\\s+");
-        if ("FIFO".equals(fields[4])) {
-            final int pid = Integer.parseInt(fields[1]);
-            final String key = (fields.length > 7) ? fields[7] : "";
-            final int fdNum = Integer.parseInt(fields[3].substring(0, fields[3].length() - 1));
-            return PipeRecord.lookup(fdNum, key, null, pid);
-        }
-        return null;
+        return pipes;
     }
 
     // Identify a pipe by pid, fd, and a key (unique across processes)
     // Mac OS X has separate keys for read and write sides, both are matched to the same "name"
     record PipeRecord(long pid, int fd, KeyedString myKey) {
-        static PipeRecord lookup(int fd, String myKey, String otherKey, int pid) {
-            return new PipeRecord(pid, fd, KeyedString.getKey(myKey, otherKey));
-        }
-
-        // Return the PipeRecord matching the fd and pid
-        static Optional<PipeRecord> pipeFor(Set<PipeRecord> pipes, long pid, int fd) {
-            return pipes.stream()
-                    .filter(p -> p.fd() == fd && p.pid() == pid)
-                    .findFirst();
-        }
-
-        // Return all the PipeRecords with the same key (the same OS pipe identification)
-        static Set<PipeRecord> allSamePipes(Set<PipeRecord> pipes, PipeRecord p) {
-            return pipes.stream()
-                    .filter(p1 -> p1.myKey().key.equals(p.myKey().key))
-                    .collect(Collectors.toSet());
+        static PipeRecord lookup(int fd, String myKey, long pid) {
+            return new PipeRecord(pid, fd, KeyedString.getKey(myKey));
         }
     }
 
@@ -357,12 +233,8 @@ public class PipelineLeaksFD {
             this(s, k);
         }
 
-        static KeyedString getKey(String key, String otherKey) {
-            var k = map.computeIfAbsent(key, KeyedString::new);
-            if (otherKey != null) {
-                map.putIfAbsent(otherKey, k);
-            }
-            return k;
+        static KeyedString getKey(String key) {
+            return map.computeIfAbsent(key, KeyedString::new);
         }
 
         public String toString() {
